// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CSS snapshots variables in cmsgov-theme.css match snapshot 1`] = `
"--accordion-button__color: var(--color-base);
--accordion-content__background-color: var(--color-white);
--accordion__background-color--hover: var(--color-primary-lighter);
--accordion__background-color: var(--color-primary-lightest);
--accordion__border-bottom-left-radius: 0px;
--accordion__border-bottom-right-radius: 0px;
--accordion__border-color: var(--color-gray-lightest);
--accordion__border-top-left-radius: 20px;
--accordion__border-top-right-radius: 20px;
--accordion__border-width: 1px;
--accordion__color: var(--color-base);
--alert-bar__width: var(--spacer-1);
--alert__background-color--error: var(--color-error-lightest);
--alert__background-color--lightweight: var(--color-white);
--alert__background-color--success: var(--color-success-lightest);
--alert__background-color--warn: var(--color-warn-lightest);
--alert__background-color: var(--color-info-lightest);
--alert__border-color--error: var(--color-error);
--alert__border-color--success: var(--color-success);
--alert__border-color--warn: var(--color-warn);
--alert__border-left-color: var(--color-info);
--alert__font-color: var(--color-base);
--alert__icon-size: 1.5rem;
--alert__padding: var(--spacer-2);
--animation-speed-1: 250ms;
--animation-speed-2: 300ms;
--animation-speed-3: 500ms;
--animation-speed-4: 800ms;
--badge__background-color--alert: var(--color-error);
--badge__background-color--info: var(--color-primary);
--badge__background-color--success: var(--color-success);
--badge__background-color--warn: var(--color-warn);
--badge__background-color: var(--color-gray-lightest);
--badge__border-radius: var(--radius-medium);
--badge__font-color--alert: var(--color-white);
--badge__font-color--info: var(--color-white);
--badge__font-color--success: var(--color-white);
--badge__font-color--warn: var(--color-base);
--badge__font-color: var(--color-base);
--box-shadow: 0 0 0 0 #fff;
--button-alt__background-color--active: var(--color-gray-lighter);
--button-alt__background-color--disabled: var(--color-transparent);
--button-alt__background-color--hover: var(--color-accent-primary);
--button-alt__background-color: var(--color-transparent);
--button-alt__border-color--active: var(--color-primary-darkest);
--button-alt__border-color--disabled: var(--color-gray-lighter);
--button-alt__border-color--hover: var(--color-primary-darker);
--button-alt__border-color: var(--color-primary);
--button-alt__color--active: var(--color-primary-darkest);
--button-alt__color--disabled: var(--color-gray-lighter);
--button-alt__color--hover: var(--color-primary-darker);
--button-alt__color: var(--color-primary);
--button-dark-alt__background-color--active: var(--color-transparent);
--button-dark-alt__background-color--disabled: var(--color-transparent);
--button-dark-alt__background-color--hover: var(--color-transparent);
--button-dark-alt__background-color: var(--color-transparent);
--button-dark-alt__border-color--active: var(--color-secondary-light);
--button-dark-alt__border-color--disabled: var(--color-gray-dark);
--button-dark-alt__border-color--hover: var(--color-secondary-lighter);
--button-dark-alt__border-color: var(--color-secondary-lightest);
--button-dark-alt__color--active: var(--color-secondary-light);
--button-dark-alt__color--disabled: var(--color-gray-dark);
--button-dark-alt__color--hover: var(--color-secondary-lighter);
--button-dark-alt__color: var(--color-secondary-lightest);
--button-dark__background-color--active: var(--color-transparent);
--button-dark__background-color--disabled: var(--color-transparent);
--button-dark__background-color--hover: var(--color-transparent);
--button-dark__background-color: var(--color-transparent);
--button-dark__border-color--active: var(--color-gray-lighter);
--button-dark__border-color--disabled: var(--color-gray-dark);
--button-dark__border-color--hover: var(--color-gray-lightest);
--button-dark__border-color: var(--color-white);
--button-dark__color--active: var(--color-gray-lighter);
--button-dark__color--disabled: var(--color-gray-dark);
--button-dark__color--hover: var(--color-gray-lightest);
--button-dark__color: var(--color-white);
--button-ghost-alt__background-color--active: var(--color-transparent);
--button-ghost-alt__background-color--disabled: var(--color-transparent);
--button-ghost-alt__background-color--hover: var(--color-accent-primary);
--button-ghost-alt__background-color: var(--color-transparent);
--button-ghost-alt__border-color--active: var(--color-transparent);
--button-ghost-alt__border-color--disabled: var(--color-transparent);
--button-ghost-alt__border-color--hover: var(--color-transparent);
--button-ghost-alt__border-color: var(--color-transparent);
--button-ghost-alt__color--active: var(--color-primary);
--button-ghost-alt__color--disabled: var(--color-gray-dark);
--button-ghost-alt__color--hover: var(--color-primary);
--button-ghost-alt__color: var(--color-primary);
--button-ghost-dark-alt__background-color--active: var(--color-transparent);
--button-ghost-dark-alt__background-color--disabled: var(--color-transparent);
--button-ghost-dark-alt__background-color--hover: var(--color-transparent);
--button-ghost-dark-alt__background-color: var(--color-transparent);
--button-ghost-dark-alt__border-color--active: var(--color-transparent);
--button-ghost-dark-alt__border-color--disabled: var(--color-transparent);
--button-ghost-dark-alt__border-color--hover: var(--color-transparent);
--button-ghost-dark-alt__border-color: var(--color-transparent);
--button-ghost-dark-alt__color--active: var(--color-secondary);
--button-ghost-dark-alt__color--disabled: var(--color-gray-dark);
--button-ghost-dark-alt__color--hover: var(--color-secondary-light);
--button-ghost-dark-alt__color: var(--color-secondary-lighter);
--button-ghost-dark__background-color--active: var(--color-transparent);
--button-ghost-dark__background-color--disabled: var(--color-transparent);
--button-ghost-dark__background-color--hover: var(--color-transparent);
--button-ghost-dark__background-color: var(--color-transparent);
--button-ghost-dark__border-color--active: var(--color-transparent);
--button-ghost-dark__border-color--disabled: var(--color-transparent);
--button-ghost-dark__border-color--hover: var(--color-transparent);
--button-ghost-dark__border-color: var(--color-transparent);
--button-ghost-dark__color--active: var(--color-gray-lighter);
--button-ghost-dark__color--disabled: var(--color-gray-dark);
--button-ghost-dark__color--hover: var(--color-gray-lightest);
--button-ghost-dark__color: var(--color-white);
--button-ghost__background-color--active: var(--color-transparent);
--button-ghost__background-color--disabled: var(--color-transparent);
--button-ghost__background-color--hover: var(--color-accent-primary);
--button-ghost__background-color: var(--color-transparent);
--button-ghost__border-color--active: var(--color-transparent);
--button-ghost__border-color--disabled: var(--color-transparent);
--button-ghost__border-color--hover: var(--color-transparent);
--button-ghost__border-color: var(--color-transparent);
--button-ghost__color--active: var(--color-primary);
--button-ghost__color--disabled: var(--color-gray-dark);
--button-ghost__color--hover: var(--color-primary);
--button-ghost__color: var(--color-primary);
--button-solid-alt__background-color--active: var(--color-primary-lightest);
--button-solid-alt__background-color--disabled: var(--color-gray-lightest);
--button-solid-alt__background-color--hover: var(--color-accent-primary);
--button-solid-alt__background-color: var(--color-primary);
--button-solid-alt__border-color--active: var(--color-primary);
--button-solid-alt__border-color--disabled: var(--color-gray-lighter);
--button-solid-alt__border-color--hover: var(--color-primary);
--button-solid-alt__border-color: var(--color-primary);
--button-solid-alt__color--active: var(--color-primary);
--button-solid-alt__color--disabled: var(--color-gray-dark);
--button-solid-alt__color--hover: var(--color-primary);
--button-solid-alt__color: var(--color-white);
--button-solid-dark-alt__background-color--active: var(--color-secondary);
--button-solid-dark-alt__background-color--disabled: var(--color-gray-darker);
--button-solid-dark-alt__background-color--hover: var(--color-secondary-light);
--button-solid-dark-alt__background-color: var(--color-secondary-lighter);
--button-solid-dark-alt__border-color--active: var(--color-secondary);
--button-solid-dark-alt__border-color--disabled: var(--color-gray-darker);
--button-solid-dark-alt__border-color--hover: var(--color-secondary-light);
--button-solid-dark-alt__border-color: var(--color-secondary-lighter);
--button-solid-dark-alt__color--active: var(--color-base);
--button-solid-dark-alt__color--disabled: var(--color-base);
--button-solid-dark-alt__color--hover: var(--color-base);
--button-solid-dark-alt__color: var(--color-base);
--button-solid-dark__background-color--active: var(--color-gray-lighter);
--button-solid-dark__background-color--disabled: var(--color-gray-darker);
--button-solid-dark__background-color--hover: var(--color-gray-lightest);
--button-solid-dark__background-color: var(--color-white);
--button-solid-dark__border-color--active: var(--color-gray-lighter);
--button-solid-dark__border-color--disabled: var(--color-gray-darker);
--button-solid-dark__border-color--hover: var(--color-gray-lightest);
--button-solid-dark__border-color: var(--color-white);
--button-solid-dark__color--active: var(--color-base);
--button-solid-dark__color--disabled: var(--color-base);
--button-solid-dark__color--hover: var(--color-base);
--button-solid-dark__color: var(--color-base);
--button-solid__background-color--active: var(--color-primary-lightest);
--button-solid__background-color--disabled: var(--color-gray-lightest);
--button-solid__background-color--hover: var(--color-accent-primary);
--button-solid__background-color: var(--color-primary);
--button-solid__border-color--active: var(--color-primary);
--button-solid__border-color--disabled: var(--color-gray-lighter);
--button-solid__border-color--hover: var(--color-primary);
--button-solid__border-color: var(--color-primary);
--button-solid__color--active: var(--color-primary);
--button-solid__color--disabled: var(--color-gray-dark);
--button-solid__color--hover: var(--color-primary);
--button-solid__color: var(--color-white);
--button__background-color--active: var(--color-primary-lightest);
--button__background-color--disabled: var(--color-gray-lightest);
--button__background-color--hover: var(--color-accent-primary);
--button__background-color: var(--color-transparent);
--button__border-color--active: var(--color-primary);
--button__border-color--disabled: var(--color-gray-lighter);
--button__border-color--hover: var(--color-primary);
--button__border-color: var(--color-primary);
--button__border-radius: var(--radius-pill);
--button__border-width: 2px;
--button__color--active: var(--color-primary-darkest);
--button__color--disabled: var(--color-gray-dark);
--button__color--hover: var(--color-primary-darker);
--button__color: var(--color-primary);
--card__box-shadow: var(--box-shadow);
--choice-label__color--disabled--inverse: var(--color-muted-inverse);
--choice-label__color--disabled: var(--color-muted);
--choice-label__top-offset: 0.25rem;
--choice-wrapper__gap--small: 0.5rem;
--choice-wrapper__gap: 0.5rem;
--choice__background-color--checked: var(--color-primary);
--choice__background-color--disabled--inverse: #e9ecf126;
--choice__background-color--disabled: var(--color-gray-lighter);
--choice__background-color--inverse: var(--color-transparent);
--choice__background-color: var(--color-background);
--choice__border-color--checked: var(--color-primary);
--choice__border-color--disabled--inverse: var(--color-gray-light);
--choice__border-color--disabled: var(--color-gray-light);
--choice__border-color--error--inverse: var(--color-white);
--choice__border-color--error: var(--color-base);
--choice__border-color--focus: var(--color-primary-darker);
--choice__border-color--inverse: var(--color-white);
--choice__border-color--left: var(--color-primary);
--choice__border-color: var(--color-base);
--choice__border-radius: 0px;
--choice__border-width: 2px;
--choice__color--disabled: var(--color-muted);
--choice__color--unchecked: var(--color-white);
--choice__size--small: 20px;
--choice__size-radio--small: 12px;
--choice__size-radio: 22px;
--choice__size: 32px;
--color-accent-primary-dark: #e6cd07;
--color-accent-primary-darker: #b3a006;
--color-accent-primary-darkest: #807204;
--color-accent-primary-light: #ffec52;
--color-accent-primary-lighter: #fff7b5;
--color-accent-primary-lightest: #fffce6;
--color-accent-primary: #ffe400;
--color-background-inverse: #07124d;
--color-background: #ffffff;
--color-base-inverse: #ffffff;
--color-base: #262626;
--color-black: #000000;
--color-border-dark: #0f1e38;
--color-border-inverse: #ffffff;
--color-border: #d9d9d9;
--color-error-dark: #cc1937;
--color-error-darker: #9f142b;
--color-error-darkest: #720e1f;
--color-error-light: #f18e9e;
--color-error-lighter: #f7bbc5;
--color-error-lightest: #fef5f7;
--color-error: #e31c3d;
--color-focus-dark: #c97532;
--color-focus-light: #ffffff;
--color-gray-dark: #5a5a5a;
--color-gray-darker: #404040;
--color-gray-darkest: #262626;
--color-gray-light: #a6a6a6;
--color-gray-lighter: #d9d9d9;
--color-gray-lightest: #f2f2f2;
--color-gray: #808080;
--color-info-dark: #0c208a;
--color-info-darker: #09196b;
--color-info-darkest: #07124d;
--color-info-light: #5666b8;
--color-info-lighter: #b6bde0;
--color-info-lightest: #e7e9f5;
--color-info: #0d2499;
--color-muted-inverse: #e9ecf1;
--color-muted: #5a5a5a;
--color-primary-dark: #0c208a;
--color-primary-darker: #09196b;
--color-primary-darkest: #07124d;
--color-primary-light: #5666b8;
--color-primary-lighter: #b6bde0;
--color-primary-lightest: #e7e9f5;
--color-primary: #0d2499;
--color-secondary-dark: #3bcb7a;
--color-secondary-darker: #2e9e5f;
--color-secondary-darkest: #217144;
--color-secondary-light: #7bebac;
--color-secondary-lighter: #c6f6db;
--color-secondary-lightest: #ecfcf3;
--color-secondary: #42e288;
--color-success-dark: #107b0d;
--color-success-darker: #0d600a;
--color-success-darkest: #094507;
--color-success-light: #59ac56;
--color-success-lighter: #b8dcb7;
--color-success-lightest: #f6faf5;
--color-success: #12890e;
--color-transparent-black-alpha25: #00000040;
--color-transparent-black-alpha50: #00000080;
--color-transparent-white-alpha25: #ffffff40;
--color-transparent-white-alpha50: #ffffff80;
--color-transparent: transparent;
--color-visited: #5f0a5c;
--color-warn-dark: #e6cd07;
--color-warn-darker: #b3a006;
--color-warn-darkest: #807204;
--color-warn-light: #ffec52;
--color-warn-lighter: #fff7b5;
--color-warn-lightest: #fffce6;
--color-warn: #ffe400;
--color-white: #ffffff;
--date-field__show-separators: 1;
--day-picker-button__background-color--hover: var(--color-primary-lightest);
--dialog-overlay__background-color: var(--color-transparent-black-alpha50);
--dialog__background-color: var(--color-background);
--dialog__padding: var(--spacer-4);
--drawer-close__color: var(--color-black);
--drawer-footer__background-color: var(--color-info-lightest);
--drawer-header__background-color: var(--color-gray-lightest);
--drawer-toggle__background-color--hover--inverse: var(--color-white);
--drawer-toggle__background-color--hover: var(--color-info);
--drawer-toggle__color--hover--inverse: var(--color-gray-darker);
--drawer-toggle__color--hover: var(--color-white);
--drawer__animation-timing: var(--animation-speed-2);
--drawer__background-color: var(--color-background);
--drawer__border-color: var(--color-border);
--field-max-width--medium: 12rem;
--field-max-width--small: 6rem;
--field-max-width: 460px;
--filter-chip-icon__color-active: var(--color-white);
--filter-chip-icon__color: var(--color-base);
--filter-chip__background-color--active: var(--color-primary);
--filter-chip__background-color: var(--color-primary-lightest);
--filter-chip__border-color--active: var(--color-primary);
--filter-chip__border-color: var(--color-primary);
--filter-chip__border-radius: var(--radius-pill);
--filter-chip__color--active: var(--color-white);
--filter-chip__color: var(--color-base);
--font-family-body: 'Public Sans', 'Inter', 'Roboto', 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', 'Arial', 'sans-serif';
--font-family-button: 'Public Sans', 'Inter', 'Roboto', 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', 'Arial', 'sans-serif';
--font-family-heading: 'Lexend', 'Inter', 'Roboto', 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', 'Arial', 'sans-serif';
--font-family-link: 'Public Sans', 'Inter', 'Roboto', 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', 'Arial', 'sans-serif';
--font-family-pagination: 'Public Sans', 'Inter', 'Roboto', 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', 'Arial', 'sans-serif';
--font-line-height-base: 1.5;
--font-line-height-heading: 1.2999999523162842;
--font-line-height-lead: 1.7000000476837158;
--font-line-height-reset: 1;
--font-size-2xl--mobile: 1.5rem;
--font-size-2xl: 1.5rem;
--font-size-3xl--mobile: 1.875rem;
--font-size-3xl: 2.25rem;
--font-size-4xl--mobile: 2.25rem;
--font-size-4xl: 3rem;
--font-size-5xl--mobile: 2.25rem;
--font-size-5xl--tablet: 3rem;
--font-size-5xl: 3.75rem;
--font-size-base: 1rem;
--font-size-lg: 1.125rem;
--font-size-md: 1rem;
--font-size-sm: 0.875rem;
--font-size-xl: 1.3125rem;
--font-weight-body-lg: var(--font-weight-normal);
--font-weight-body-md: var(--font-weight-normal);
--font-weight-body-sm: var(--font-weight-normal);
--font-weight-bold: 700;
--font-weight-button-lg: var(--font-weight-bold);
--font-weight-button-md: var(--font-weight-bold);
--font-weight-button-sm: var(--font-weight-normal);
--font-weight-heading-2xl: var(--font-weight-semibold);
--font-weight-heading-3xl: var(--font-weight-normal);
--font-weight-heading-4xl: var(--font-weight-normal);
--font-weight-heading-5xl: var(--font-weight-semibold);
--font-weight-heading-lg: var(--font-weight-semibold);
--font-weight-heading-md: var(--font-weight-semibold);
--font-weight-heading-sm: var(--font-weight-normal);
--font-weight-heading-xl: var(--font-weight-semibold);
--font-weight-normal: 400;
--font-weight-semibold: 600;
--global__color--inverse: var(--color-base-inverse);
--global__color: var(--color-base);
--global__font-family: var(--font-family-body);
--global__font-size: var(--font-size-base);
--global__line-height: var(--font-line-height-base);
--grid-columns: 12;
--grid-form-gutter-width: var(--spacer-2);
--grid-gutter-width: var(--spacer-4);
--hint__color--inverse: var(--color-muted-inverse);
--hint__color: var(--color-muted);
--inline-error__color--inverse: var(--color-error-light);
--inline-error__color: var(--color-error);
--label__font-family: var(--font-family-body);
--label__font-size: var(--font-size-md);
--label__font-weight: var(--font-weight-bold);
--label__letter-spacing: 0px;
--label__text-transform: inherit;
--link-inverse__color--active: var(--color-muted-inverse);
--link-inverse__color--hover: var(--color-muted-inverse);
--link-inverse__color--visited: var(--color-muted-inverse);
--link-inverse__color: var(--color-base-inverse);
--link__color--active: var(--color-base);
--link__color--hover: var(--color-primary);
--link__color--visited: var(--color-visited);
--link__color: var(--color-primary);
--link__text-decoration-offset: 4px;
--link__text-decoration-thickness--hover: 2.4000000953674316px;
--link__text-decoration-thickness: 2.4000000953674316px;
--measure-base: 65ex;
--measure-narrow: 45ex;
--measure-wide: 80ex;
--media-width-lg: 1024px;
--media-width-md: 768px;
--media-width-sm: 544px;
--media-width-xl: 1280px;
--media-width-xs: 0px;
--pagination-current-page__color: var(--color-base);
--pagination-link__color--active: var(--color-primary-darkest);
--pagination-link__color--disabled: var(--color-gray-lighter);
--pagination-link__color--focus: var(--color-primary-darker);
--pagination-link__color--hover: var(--color-primary-darker);
--pagination-link__color: var(--color-primary);
--pagination-overflow__color: var(--color-gray-dark);
--pagination-page-count__color: var(--color-gray-dark);
--radius-circle: 100%;
--radius-default: 3px;
--radius-large: 8px;
--radius-medium: 4px;
--radius-pill: 9999px;
--radius-small: 2px;
--review__border-color: var(--color-border);
--site-margins-mobile: 1.5rem;
--site-margins: 3rem;
--site-max-width: 1104px;
--spacer-1: 8px;
--spacer-2: 16px;
--spacer-3: 24px;
--spacer-4: 32px;
--spacer-5: 40px;
--spacer-6: 48px;
--spacer-7: 56px;
--spacer-half: 4px;
--spacer-none: 0px;
--spinner__background-color--inverse: var(--color-background-inverse);
--spinner__background-color: var(--color-background);
--spinner__color--inverse: var(--color-white);
--spinner__color: var(--color-base);
--steplist-step__background-color--completed: var(--color-base);
--steplist-step__border-color--default: var(--color-muted);
--steplist-step__border-color: var(--color-border);
--steplist-step__color--completed: var(--color-base);
--steplist-step__color--current: var(--color-white);
--steplist-step__color: var(--color-muted);
--steplist__background-color--current: var(--color-primary);
--steplist__color--current: var(--color-primary);
--steplist__color: var(--color-muted);
--table-header__background-color: var(--color-primary-lightest);
--table__background-color--striped: var(--color-primary-lightest);
--table__border-color: var(--color-gray-lighter);
--table__padding: var(--spacer-2);
--tabs-panel__background-color: var(--color-background);
--tabs__background-color--disabled: var(--color-gray-lighter);
--tabs__background-color--hover: var(--color-primary-lightest);
--tabs__background-color--selected: var(--color-background);
--tabs__background-color: var(--color-background);
--tabs__border-color--disabled: var(--color-gray-lighter);
--tabs__border-color--selected: var(--color-primary);
--tabs__border-color: var(--color-border);
--tabs__color--active: var(--color-primary-darker);
--tabs__color--disabled: var(--color-gray-darker);
--tabs__color--hover: var(--color-primary);
--tabs__color--selected: var(--color-primary);
--tabs__color: var(--color-base);
--text-input-currency-icon__line-height: var(--text-input__line-height);
--text-input-currency-icon__spacing: 20px;
--text-input__background-color--disabled: var(--color-gray-lighter);
--text-input__border-color--disabled: var(--color-gray-light);
--text-input__border-color--error--inverse: var(--color-error-light);
--text-input__border-color--error: var(--color-error);
--text-input__border-color--inverse: var(--color-black);
--text-input__border-color: var(--color-base);
--text-input__border-radius: var(--radius-default);
--text-input__border-width--disabled: 2px;
--text-input__border-width--error: 3px;
--text-input__border-width: 2px;
--text-input__color: var(--color-base);
--text-input__divider-color: var(--color-gray-light);
--text-input__line-height: 1.2999999523162842;
--text-input__padding: var(--spacer-1);
--tooltip-icon__color--inverse: var(--color-white);
--tooltip-icon__color: var(--color-primary);
--tooltip-trigger__color: var(--color-base);
--tooltip__background-color: var(--color-background);
--tooltip__border-color--active: #0d249940;
--tooltip__border-color--inverse-active: #ffffff40;
--tooltip__border-color: var(--color-gray-darker);
--tooltip__border-width: 1px;
--tooltip__box-shadow-color: var(--color-gray-light);
--tooltip__color: var(--color-base);
--usa-banner-close-button__background-color--mobile: var(--color-gray-lighter);
--usa-banner-close-button__color--mobile: var(--color-primary);
--usa-banner-domain-icon__color: var(--color-primary);
--usa-banner-security-icon__color: var(--color-success-light);
--usa-banner__background-color: var(--color-gray-lightest);
--vertical-nav-item__background-color--hover: var(--color-gray-lightest);
--vertical-nav-item__border-color: var(--color-gray-dark);
--vertical-nav-item__color--hover: var(--color-primary);
--vertical-nav-label-icon__color: var(--color-base);
--vertical-nav-label__border-color--current: var(--color-primary);
--vertical-nav-label__color--current: var(--color-primary);
--vertical-nav-label__color: var(--color-base);"
`;

exports[`CSS snapshots variables in core-theme.css match snapshot 1`] = `
"--accordion-button__color: var(--color-base);
--accordion-content__background-color: var(--color-white);
--accordion__background-color--hover: var(--color-gray-lighter);
--accordion__background-color: var(--color-gray-lightest);
--accordion__border-bottom-left-radius: 0px;
--accordion__border-bottom-right-radius: 0px;
--accordion__border-color: var(--color-gray-lightest);
--accordion__border-top-left-radius: 0px;
--accordion__border-top-right-radius: 0px;
--accordion__border-width: var(--spacer-half);
--accordion__color: var(--color-base);
--alert-bar__width: var(--spacer-1);
--alert__background-color--error: var(--color-error-lightest);
--alert__background-color--lightweight: var(--color-white);
--alert__background-color--success: var(--color-success-lightest);
--alert__background-color--warn: var(--color-warn-lightest);
--alert__background-color: var(--color-info-lightest);
--alert__border-color--error: var(--color-error);
--alert__border-color--success: var(--color-success);
--alert__border-color--warn: var(--color-warn);
--alert__border-left-color: var(--color-info);
--alert__font-color: var(--color-base);
--alert__icon-size: 1.5rem;
--alert__padding: var(--spacer-2);
--animation-speed-1: 250ms;
--animation-speed-2: 300ms;
--animation-speed-3: 500ms;
--animation-speed-4: 800ms;
--badge__background-color--alert: var(--color-error);
--badge__background-color--info: var(--color-primary);
--badge__background-color--success: var(--color-success);
--badge__background-color--warn: var(--color-warn);
--badge__background-color: var(--color-gray-dark);
--badge__border-radius: var(--radius-pill);
--badge__font-color--alert: var(--color-white);
--badge__font-color--info: var(--color-white);
--badge__font-color--success: var(--color-white);
--badge__font-color--warn: var(--color-base);
--badge__font-color: var(--color-white);
--box-shadow: 0 0 0 0 #fff;
--button-alt__background-color--active: var(--color-gray-lighter);
--button-alt__background-color--disabled: var(--color-transparent);
--button-alt__background-color--hover: var(--color-gray-lightest);
--button-alt__background-color: var(--color-transparent);
--button-alt__border-color--active: var(--color-secondary-darkest);
--button-alt__border-color--disabled: var(--color-gray-lighter);
--button-alt__border-color--hover: var(--color-secondary-darker);
--button-alt__border-color: var(--color-secondary);
--button-alt__color--active: var(--color-secondary-darkest);
--button-alt__color--disabled: var(--color-gray-lighter);
--button-alt__color--hover: var(--color-secondary-darker);
--button-alt__color: var(--color-secondary);
--button-dark-alt__background-color--active: var(--color-transparent);
--button-dark-alt__background-color--disabled: var(--color-transparent);
--button-dark-alt__background-color--hover: var(--color-transparent);
--button-dark-alt__background-color: var(--color-transparent);
--button-dark-alt__border-color--active: var(--color-secondary-light);
--button-dark-alt__border-color--disabled: var(--color-gray-dark);
--button-dark-alt__border-color--hover: var(--color-secondary-lightest);
--button-dark-alt__border-color: var(--color-secondary-lighter);
--button-dark-alt__color--active: var(--color-secondary-light);
--button-dark-alt__color--disabled: var(--color-gray-dark);
--button-dark-alt__color--hover: var(--color-secondary-lightest);
--button-dark-alt__color: var(--color-secondary-lighter);
--button-dark__background-color--active: var(--color-transparent);
--button-dark__background-color--disabled: var(--color-transparent);
--button-dark__background-color--hover: var(--color-transparent);
--button-dark__background-color: var(--color-transparent);
--button-dark__border-color--active: var(--color-gray-lighter);
--button-dark__border-color--disabled: var(--color-gray-dark);
--button-dark__border-color--hover: var(--color-white);
--button-dark__border-color: var(--color-gray-lightest);
--button-dark__color--active: var(--color-gray-lighter);
--button-dark__color--disabled: var(--color-gray-dark);
--button-dark__color--hover: var(--color-white);
--button-dark__color: var(--color-gray-lightest);
--button-ghost-alt__background-color--active: var(--color-transparent);
--button-ghost-alt__background-color--disabled: var(--color-transparent);
--button-ghost-alt__background-color--hover: var(--color-transparent);
--button-ghost-alt__background-color: var(--color-transparent);
--button-ghost-alt__border-color--active: var(--color-transparent);
--button-ghost-alt__border-color--disabled: var(--color-transparent);
--button-ghost-alt__border-color--hover: var(--color-transparent);
--button-ghost-alt__border-color: var(--color-transparent);
--button-ghost-alt__color--active: var(--color-secondary-darkest);
--button-ghost-alt__color--disabled: var(--color-gray-lighter);
--button-ghost-alt__color--hover: var(--color-secondary-darker);
--button-ghost-alt__color: var(--color-secondary);
--button-ghost-dark-alt__background-color--active: var(--color-transparent);
--button-ghost-dark-alt__background-color--disabled: var(--color-transparent);
--button-ghost-dark-alt__background-color--hover: var(--color-transparent);
--button-ghost-dark-alt__background-color: var(--color-transparent);
--button-ghost-dark-alt__border-color--active: var(--color-transparent);
--button-ghost-dark-alt__border-color--disabled: var(--color-transparent);
--button-ghost-dark-alt__border-color--hover: var(--color-transparent);
--button-ghost-dark-alt__border-color: var(--color-transparent);
--button-ghost-dark-alt__color--active: var(--color-secondary);
--button-ghost-dark-alt__color--disabled: var(--color-gray-dark);
--button-ghost-dark-alt__color--hover: var(--color-secondary-lightest);
--button-ghost-dark-alt__color: var(--color-secondary-lighter);
--button-ghost-dark__background-color--active: var(--color-transparent);
--button-ghost-dark__background-color--disabled: var(--color-transparent);
--button-ghost-dark__background-color--hover: var(--color-transparent);
--button-ghost-dark__background-color: var(--color-transparent);
--button-ghost-dark__border-color--active: var(--color-transparent);
--button-ghost-dark__border-color--disabled: var(--color-transparent);
--button-ghost-dark__border-color--hover: var(--color-transparent);
--button-ghost-dark__border-color: var(--color-transparent);
--button-ghost-dark__color--active: var(--color-gray-lighter);
--button-ghost-dark__color--disabled: var(--color-gray-dark);
--button-ghost-dark__color--hover: var(--color-white);
--button-ghost-dark__color: var(--color-gray-lightest);
--button-ghost__background-color--active: var(--color-transparent);
--button-ghost__background-color--disabled: var(--color-transparent);
--button-ghost__background-color--hover: var(--color-transparent);
--button-ghost__background-color: var(--color-transparent);
--button-ghost__border-color--active: var(--color-transparent);
--button-ghost__border-color--disabled: var(--color-transparent);
--button-ghost__border-color--hover: var(--color-transparent);
--button-ghost__border-color: var(--color-transparent);
--button-ghost__color--active: var(--color-primary-darkest);
--button-ghost__color--disabled: var(--color-gray-lighter);
--button-ghost__color--hover: var(--color-primary-darker);
--button-ghost__color: var(--color-primary);
--button-solid-alt__background-color--active: var(--color-secondary-darkest);
--button-solid-alt__background-color--disabled: var(--color-gray-lighter);
--button-solid-alt__background-color--hover: var(--color-secondary-darker);
--button-solid-alt__background-color: var(--color-secondary);
--button-solid-alt__border-color--active: var(--color-secondary-darkest);
--button-solid-alt__border-color--disabled: var(--color-gray-lighter);
--button-solid-alt__border-color--hover: var(--color-secondary-darker);
--button-solid-alt__border-color: var(--color-secondary);
--button-solid-alt__color--active: var(--color-white);
--button-solid-alt__color--disabled: var(--color-gray-darker);
--button-solid-alt__color--hover: var(--color-white);
--button-solid-alt__color: var(--color-white);
--button-solid-dark-alt__background-color--active: var(--color-secondary);
--button-solid-dark-alt__background-color--disabled: var(--color-gray-darker);
--button-solid-dark-alt__background-color--hover: var(--color-secondary-lightest);
--button-solid-dark-alt__background-color: var(--color-secondary-lighter);
--button-solid-dark-alt__border-color--active: var(--color-secondary);
--button-solid-dark-alt__border-color--disabled: var(--color-gray-darker);
--button-solid-dark-alt__border-color--hover: var(--color-secondary-lightest);
--button-solid-dark-alt__border-color: var(--color-secondary-lighter);
--button-solid-dark-alt__color--active: var(--color-base);
--button-solid-dark-alt__color--disabled: var(--color-base);
--button-solid-dark-alt__color--hover: var(--color-base);
--button-solid-dark-alt__color: var(--color-base);
--button-solid-dark__background-color--active: var(--color-gray-lighter);
--button-solid-dark__background-color--disabled: var(--color-gray-darker);
--button-solid-dark__background-color--hover: var(--color-white);
--button-solid-dark__background-color: var(--color-gray-lightest);
--button-solid-dark__border-color--active: var(--color-gray-lighter);
--button-solid-dark__border-color--disabled: var(--color-gray-darker);
--button-solid-dark__border-color--hover: var(--color-white);
--button-solid-dark__border-color: var(--color-gray-lightest);
--button-solid-dark__color--active: var(--color-base);
--button-solid-dark__color--disabled: var(--color-base);
--button-solid-dark__color--hover: var(--color-base);
--button-solid-dark__color: var(--color-base);
--button-solid__background-color--active: var(--color-primary-darkest);
--button-solid__background-color--disabled: var(--color-gray-lighter);
--button-solid__background-color--hover: var(--color-primary-darker);
--button-solid__background-color: var(--color-primary);
--button-solid__border-color--active: var(--color-primary-darkest);
--button-solid__border-color--disabled: var(--color-gray-lighter);
--button-solid__border-color--hover: var(--color-primary-darker);
--button-solid__border-color: var(--color-primary);
--button-solid__color--active: var(--color-white);
--button-solid__color--disabled: var(--color-gray-darker);
--button-solid__color--hover: var(--color-white);
--button-solid__color: var(--color-white);
--button__background-color--active: var(--color-gray-lighter);
--button__background-color--disabled: var(--color-transparent);
--button__background-color--hover: var(--color-gray-lightest);
--button__background-color: var(--color-transparent);
--button__border-color--active: var(--color-primary-darkest);
--button__border-color--disabled: var(--color-gray-lighter);
--button__border-color--hover: var(--color-primary-darker);
--button__border-color: var(--color-primary);
--button__border-radius: var(--radius-default);
--button__border-width: 1px;
--button__color--active: var(--color-primary-darkest);
--button__color--disabled: var(--color-gray-lighter);
--button__color--hover: var(--color-primary-darker);
--button__color: var(--color-primary);
--card__box-shadow: var(--box-shadow);
--choice-label__color--disabled--inverse: var(--color-muted-inverse);
--choice-label__color--disabled: var(--color-muted);
--choice-label__top-offset: 0.25rem;
--choice-wrapper__gap--small: 0.5rem;
--choice-wrapper__gap: 0.5rem;
--choice__background-color--checked: var(--color-primary);
--choice__background-color--disabled--inverse: #e9ecf126;
--choice__background-color--disabled: var(--color-gray-lighter);
--choice__background-color--inverse: var(--color-transparent);
--choice__background-color: var(--color-background);
--choice__border-color--checked: var(--color-primary);
--choice__border-color--disabled--inverse: var(--color-gray-light);
--choice__border-color--disabled: var(--color-gray-light);
--choice__border-color--error--inverse: var(--color-white);
--choice__border-color--error: var(--color-base);
--choice__border-color--focus: var(--color-primary-darker);
--choice__border-color--inverse: var(--color-white);
--choice__border-color--left: var(--color-primary);
--choice__border-color: var(--color-base);
--choice__border-radius: 0px;
--choice__border-width: 2px;
--choice__color--disabled: var(--color-muted);
--choice__color--unchecked: var(--color-white);
--choice__size--small: 20px;
--choice__size-radio--small: 12px;
--choice__size-radio: 22px;
--choice__size: 32px;
--color-accent-primary-dark: #c73103;
--color-accent-primary-darker: #9b2602;
--color-accent-primary-darkest: #6f1b02;
--color-accent-primary-light: #e7724f;
--color-accent-primary-lighter: #f5c3b3;
--color-accent-primary-lightest: #fcebe6;
--color-accent-primary: #dd3603;
--color-background-inverse: #00395e;
--color-background: #ffffff;
--color-base-inverse: #ffffff;
--color-base: #262626;
--color-black: #000000;
--color-border-dark: #0f1e38;
--color-border-inverse: #ffffff;
--color-border: #d9d9d9;
--color-error-dark: #cc1937;
--color-error-darker: #9f142b;
--color-error-darkest: #720e1f;
--color-error-light: #eb6077;
--color-error-lighter: #f7bbc5;
--color-error-lightest: #fef5f7;
--color-error: #e31c3d;
--color-focus-dark: #bd13b8;
--color-focus-light: #ffffff;
--color-gray-dark: #5a5a5a;
--color-gray-darker: #404040;
--color-gray-darkest: #262626;
--color-gray-light: #a6a6a6;
--color-gray-lighter: #d9d9d9;
--color-gray-lightest: #f2f2f2;
--color-gray: #808080;
--color-info-dark: #02acd0;
--color-info-darker: #0186a2;
--color-info-darkest: #016074;
--color-info-light: #4ed2ee;
--color-info-lighter: #b3ecf8;
--color-info-lightest: #e6f9fd;
--color-info: #02bfe7;
--color-muted-inverse: #e9ecf1;
--color-muted: #5a5a5a;
--color-primary-dark: #0066a9;
--color-primary-darker: #004f84;
--color-primary-darkest: #00395e;
--color-primary-light: #4d9cd0;
--color-primary-lighter: #b3d4eb;
--color-primary-lightest: #e6f1f8;
--color-primary: #0071bc;
--color-secondary-dark: #107b0d;
--color-secondary-darker: #0d600a;
--color-secondary-darkest: #094507;
--color-secondary-light: #59ac56;
--color-secondary-lighter: #b8dcb7;
--color-secondary-lightest: #e7f3e7;
--color-secondary: #12890e;
--color-success-dark: #107b0d;
--color-success-darker: #0d600a;
--color-success-darkest: #094507;
--color-success-light: #59ac56;
--color-success-lighter: #b8dcb7;
--color-success-lightest: #f6faf5;
--color-success: #12890e;
--color-transparent-black-alpha25: #00000040;
--color-transparent-black-alpha50: #00000080;
--color-transparent-white-alpha25: #ffffff40;
--color-transparent-white-alpha50: #ffffff80;
--color-transparent: transparent;
--color-visited: #4c2c92;
--color-warn-dark: #dfb01c;
--color-warn-darker: #ae8916;
--color-warn-darkest: #7c6210;
--color-warn-light: #fad662;
--color-warn-lighter: #fdedbc;
--color-warn-lightest: #fef9e9;
--color-warn: #f8c41f;
--color-white: #ffffff;
--date-field__show-separators: 1;
--day-picker-button__background-color--hover: var(--color-primary-lightest);
--dialog-overlay__background-color: var(--color-transparent-black-alpha50);
--dialog__background-color: var(--color-background);
--dialog__padding: var(--spacer-4);
--drawer-close__color: var(--color-black);
--drawer-footer__background-color: var(--color-info-lightest);
--drawer-header__background-color: var(--color-gray-lightest);
--drawer-toggle__background-color--hover--inverse: var(--color-white);
--drawer-toggle__background-color--hover: var(--color-info);
--drawer-toggle__color--hover--inverse: var(--color-gray-darker);
--drawer-toggle__color--hover: var(--color-white);
--drawer__animation-timing: var(--animation-speed-2);
--drawer__background-color: var(--color-background);
--drawer__border-color: var(--color-border);
--field-max-width--medium: 12rem;
--field-max-width--small: 6rem;
--field-max-width: 460px;
--filter-chip-icon__color-active: var(--color-white);
--filter-chip-icon__color: var(--color-base);
--filter-chip__background-color--active: var(--color-primary);
--filter-chip__background-color: var(--color-primary-lightest);
--filter-chip__border-color--active: var(--color-primary);
--filter-chip__border-color: var(--color-primary);
--filter-chip__border-radius: var(--radius-pill);
--filter-chip__color--active: var(--color-white);
--filter-chip__color: var(--color-base);
--font-family-body: 'Open Sans', 'Inter', 'Roboto', 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', 'Arial', 'sans-serif';
--font-family-button: 'Open Sans', 'Inter', 'Roboto', 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', 'Arial', 'sans-serif';
--font-family-heading: 'Open Sans', 'Inter', 'Roboto', 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', 'Arial', 'sans-serif';
--font-family-link: 'Open Sans', 'Inter', 'Roboto', 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', 'Arial', 'sans-serif';
--font-family-pagination: 'Open Sans', 'Inter', 'Roboto', 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', 'Arial', 'sans-serif';
--font-line-height-base: 1.5;
--font-line-height-heading: 1.2999999523162842;
--font-line-height-lead: 1.7000000476837158;
--font-line-height-reset: 1;
--font-size-2xl--mobile: 1.5rem;
--font-size-2xl: 1.5rem;
--font-size-3xl--mobile: 1.875rem;
--font-size-3xl: 2.25rem;
--font-size-4xl--mobile: 2.25rem;
--font-size-4xl: 3rem;
--font-size-5xl--mobile: 2.25rem;
--font-size-5xl--tablet: 3rem;
--font-size-5xl: 3.75rem;
--font-size-base: 1rem;
--font-size-lg: 1.125rem;
--font-size-md: 1rem;
--font-size-sm: 0.875rem;
--font-size-xl: 1.3125rem;
--font-weight-body-lg: var(--font-weight-normal);
--font-weight-body-md: var(--font-weight-normal);
--font-weight-body-sm: var(--font-weight-normal);
--font-weight-bold: 700;
--font-weight-button-lg: var(--font-weight-bold);
--font-weight-button-md: var(--font-weight-bold);
--font-weight-button-sm: var(--font-weight-normal);
--font-weight-heading-2xl: var(--font-weight-bold);
--font-weight-heading-3xl: var(--font-weight-normal);
--font-weight-heading-4xl: var(--font-weight-normal);
--font-weight-heading-5xl: var(--font-weight-bold);
--font-weight-heading-lg: var(--font-weight-bold);
--font-weight-heading-md: var(--font-weight-bold);
--font-weight-heading-sm: var(--font-weight-normal);
--font-weight-heading-xl: var(--font-weight-bold);
--font-weight-normal: 400;
--font-weight-semibold: 600;
--global__color--inverse: var(--color-base-inverse);
--global__color: var(--color-base);
--global__font-family: var(--font-family-body);
--global__font-size: var(--font-size-base);
--global__line-height: var(--font-line-height-base);
--grid-columns: 12;
--grid-form-gutter-width: var(--spacer-2);
--grid-gutter-width: var(--spacer-4);
--hint__color--inverse: var(--color-muted-inverse);
--hint__color: var(--color-muted);
--inline-error__color--inverse: var(--color-error-lighter);
--inline-error__color: var(--color-error);
--label__font-family: var(--font-family-body);
--label__font-size: var(--font-size-md);
--label__font-weight: var(--font-weight-bold);
--label__letter-spacing: 0px;
--label__text-transform: inherit;
--link-inverse__color--active: var(--color-muted-inverse);
--link-inverse__color--hover: var(--color-muted-inverse);
--link-inverse__color--visited: var(--color-muted-inverse);
--link-inverse__color: var(--color-base-inverse);
--link__color--active: var(--color-primary-darkest);
--link__color--hover: var(--color-primary-darker);
--link__color--visited: var(--color-visited);
--link__color: var(--color-primary);
--link__text-decoration-offset: 0.0390625rem;
--link__text-decoration-thickness--hover: 0.0625rem;
--link__text-decoration-thickness: 0.0625rem;
--measure-base: 65ex;
--measure-narrow: 45ex;
--measure-wide: 80ex;
--media-width-lg: 1024px;
--media-width-md: 768px;
--media-width-sm: 544px;
--media-width-xl: 1280px;
--media-width-xs: 0px;
--pagination-current-page__color: var(--color-base);
--pagination-link__color--active: var(--color-primary-darkest);
--pagination-link__color--disabled: var(--color-gray-lighter);
--pagination-link__color--focus: var(--color-primary-darker);
--pagination-link__color--hover: var(--color-primary-darker);
--pagination-link__color: var(--color-primary);
--pagination-overflow__color: var(--color-gray-dark);
--pagination-page-count__color: var(--color-gray-dark);
--radius-circle: 100%;
--radius-default: 3px;
--radius-large: 8px;
--radius-medium: 4px;
--radius-pill: 9999px;
--radius-small: 2px;
--review__border-color: var(--color-border);
--site-margins-mobile: 1.5rem;
--site-margins: 3rem;
--site-max-width: 1104px;
--spacer-1: 8px;
--spacer-2: 16px;
--spacer-3: 24px;
--spacer-4: 32px;
--spacer-5: 40px;
--spacer-6: 48px;
--spacer-7: 56px;
--spacer-half: 4px;
--spacer-none: 0px;
--spinner__background-color--inverse: var(--color-background-inverse);
--spinner__background-color: var(--color-background);
--spinner__color--inverse: var(--color-white);
--spinner__color: var(--color-base);
--steplist-step__background-color--completed: var(--color-base);
--steplist-step__border-color--default: var(--color-muted);
--steplist-step__border-color: var(--color-border);
--steplist-step__color--completed: var(--color-base);
--steplist-step__color--current: var(--color-white);
--steplist-step__color: var(--color-muted);
--steplist__background-color--current: var(--color-primary);
--steplist__color--current: var(--color-primary);
--steplist__color: var(--color-muted);
--table-header__background-color: var(--color-gray-lightest);
--table__background-color--striped: var(--color-gray-lightest);
--table__border-color: var(--color-black);
--table__padding: var(--spacer-2);
--tabs-panel__background-color: var(--color-background);
--tabs__background-color--disabled: var(--color-gray-lighter);
--tabs__background-color--hover: var(--color-background);
--tabs__background-color--selected: var(--color-background);
--tabs__background-color: var(--color-background);
--tabs__border-color--disabled: var(--color-gray-lighter);
--tabs__border-color--selected: var(--color-primary);
--tabs__border-color: var(--color-border);
--tabs__color--active: var(--color-primary-darker);
--tabs__color--disabled: var(--color-gray-darker);
--tabs__color--hover: var(--color-primary);
--tabs__color--selected: var(--color-primary);
--tabs__color: var(--color-base);
--text-input-currency-icon__line-height: var(--text-input__line-height);
--text-input-currency-icon__spacing: 20px;
--text-input__background-color--disabled: var(--color-gray-lighter);
--text-input__border-color--disabled: var(--color-gray-light);
--text-input__border-color--error--inverse: var(--color-error-lighter);
--text-input__border-color--error: var(--color-error);
--text-input__border-color--inverse: var(--color-black);
--text-input__border-color: var(--color-base);
--text-input__border-radius: var(--radius-default);
--text-input__border-width--disabled: 2px;
--text-input__border-width--error: 3px;
--text-input__border-width: 2px;
--text-input__color: var(--color-base);
--text-input__divider-color: var(--color-gray-light);
--text-input__line-height: 1.2999999523162842;
--text-input__padding: var(--spacer-1);
--tooltip-icon__color--inverse: var(--color-white);
--tooltip-icon__color: var(--color-primary);
--tooltip-trigger__color: var(--color-base);
--tooltip__background-color: var(--color-background);
--tooltip__border-color--active: #0071bc40;
--tooltip__border-color--inverse-active: #ffffff40;
--tooltip__border-color: var(--color-gray-darker);
--tooltip__border-width: 1px;
--tooltip__box-shadow-color: var(--color-gray-light);
--tooltip__color: var(--color-base);
--usa-banner-close-button__background-color--mobile: var(--color-gray-lighter);
--usa-banner-close-button__color--mobile: var(--color-primary);
--usa-banner-domain-icon__color: var(--color-primary);
--usa-banner-security-icon__color: var(--color-success-light);
--usa-banner__background-color: var(--color-gray-lightest);
--vertical-nav-item__background-color--hover: var(--color-gray-lightest);
--vertical-nav-item__border-color: var(--color-gray-dark);
--vertical-nav-item__color--hover: var(--color-primary);
--vertical-nav-label-icon__color: var(--color-base);
--vertical-nav-label__border-color--current: var(--color-primary);
--vertical-nav-label__color--current: var(--color-primary);
--vertical-nav-label__color: var(--color-base);"
`;

exports[`CSS snapshots variables in healthcare-theme.css match snapshot 1`] = `
"--accordion-button__color: var(--color-primary);
--accordion-content__background-color: var(--color-transparent);
--accordion__background-color--hover: var(--color-transparent);
--accordion__background-color: var(--color-transparent);
--accordion__border-bottom-left-radius: 0px;
--accordion__border-bottom-right-radius: 0px;
--accordion__border-color: var(--color-transparent);
--accordion__border-top-left-radius: 0px;
--accordion__border-top-right-radius: 0px;
--accordion__border-width: var(--spacer-half);
--accordion__color: var(--color-base);
--alert-bar__width: var(--spacer-1);
--alert__background-color--error: var(--color-error-lightest);
--alert__background-color--lightweight: var(--color-white);
--alert__background-color--success: var(--color-success-lightest);
--alert__background-color--warn: var(--color-warn-lightest);
--alert__background-color: var(--color-info-lightest);
--alert__border-color--error: var(--color-error);
--alert__border-color--success: var(--color-success);
--alert__border-color--warn: var(--color-warn);
--alert__border-left-color: var(--color-info);
--alert__font-color: var(--color-base);
--alert__icon-size: 1.5rem;
--alert__padding: var(--spacer-2);
--animation-speed-1: 250ms;
--animation-speed-2: 300ms;
--animation-speed-3: 500ms;
--animation-speed-4: 800ms;
--badge__background-color--alert: var(--color-error);
--badge__background-color--info: var(--color-primary);
--badge__background-color--success: var(--color-success);
--badge__background-color--warn: var(--color-warn);
--badge__background-color: var(--color-gray-dark);
--badge__border-radius: var(--radius-pill);
--badge__font-color--alert: var(--color-white);
--badge__font-color--info: var(--color-white);
--badge__font-color--success: var(--color-white);
--badge__font-color--warn: var(--color-base);
--badge__font-color: var(--color-white);
--box-shadow: 0 4px 4px 0 #00000040;
--button-alt__background-color--active: var(--color-primary-darkest);
--button-alt__background-color--disabled: var(--color-white);
--button-alt__background-color--hover: var(--color-primary);
--button-alt__background-color: var(--color-white);
--button-alt__border-color--active: var(--color-primary-darkest);
--button-alt__border-color--disabled: var(--color-gray-lighter);
--button-alt__border-color--hover: var(--color-primary);
--button-alt__border-color: var(--color-primary);
--button-alt__color--active: var(--color-white);
--button-alt__color--disabled: var(--color-gray-lighter);
--button-alt__color--hover: var(--color-white);
--button-alt__color: var(--color-primary);
--button-dark-alt__background-color--active: var(--color-transparent);
--button-dark-alt__background-color--disabled: var(--color-transparent);
--button-dark-alt__background-color--hover: var(--color-transparent);
--button-dark-alt__background-color: var(--color-transparent);
--button-dark-alt__border-color--active: var(--color-gray-lighter);
--button-dark-alt__border-color--disabled: var(--color-gray-dark);
--button-dark-alt__border-color--hover: var(--color-gray-lightest);
--button-dark-alt__border-color: var(--color-white);
--button-dark-alt__color--active: var(--color-gray-lighter);
--button-dark-alt__color--disabled: var(--color-gray-dark);
--button-dark-alt__color--hover: var(--color-gray-lightest);
--button-dark-alt__color: var(--color-white);
--button-dark__background-color--active: var(--color-transparent);
--button-dark__background-color--disabled: var(--color-transparent);
--button-dark__background-color--hover: var(--color-transparent);
--button-dark__background-color: var(--color-transparent);
--button-dark__border-color--active: var(--color-gray-lighter);
--button-dark__border-color--disabled: var(--color-gray-dark);
--button-dark__border-color--hover: var(--color-gray-lightest);
--button-dark__border-color: var(--color-white);
--button-dark__color--active: var(--color-gray-lighter);
--button-dark__color--disabled: var(--color-gray-dark);
--button-dark__color--hover: var(--color-gray-lightest);
--button-dark__color: var(--color-white);
--button-ghost-alt__background-color--active: var(--color-transparent);
--button-ghost-alt__background-color--disabled: var(--color-transparent);
--button-ghost-alt__background-color--hover: var(--color-transparent);
--button-ghost-alt__background-color: var(--color-transparent);
--button-ghost-alt__border-color--active: var(--color-transparent);
--button-ghost-alt__border-color--disabled: var(--color-transparent);
--button-ghost-alt__border-color--hover: var(--color-transparent);
--button-ghost-alt__border-color: var(--color-transparent);
--button-ghost-alt__color--active: var(--color-primary-darkest);
--button-ghost-alt__color--disabled: var(--color-gray-lighter);
--button-ghost-alt__color--hover: var(--color-primary-darker);
--button-ghost-alt__color: var(--color-primary);
--button-ghost-dark-alt__background-color--active: var(--color-transparent);
--button-ghost-dark-alt__background-color--disabled: var(--color-transparent);
--button-ghost-dark-alt__background-color--hover: var(--color-transparent);
--button-ghost-dark-alt__background-color: var(--color-transparent);
--button-ghost-dark-alt__border-color--active: var(--color-transparent);
--button-ghost-dark-alt__border-color--disabled: var(--color-transparent);
--button-ghost-dark-alt__border-color--hover: var(--color-transparent);
--button-ghost-dark-alt__border-color: var(--color-transparent);
--button-ghost-dark-alt__color--active: var(--color-gray-lighter);
--button-ghost-dark-alt__color--disabled: var(--color-gray-dark);
--button-ghost-dark-alt__color--hover: var(--color-gray-lightest);
--button-ghost-dark-alt__color: var(--color-white);
--button-ghost-dark__background-color--active: var(--color-transparent);
--button-ghost-dark__background-color--disabled: var(--color-transparent);
--button-ghost-dark__background-color--hover: var(--color-transparent);
--button-ghost-dark__background-color: var(--color-transparent);
--button-ghost-dark__border-color--active: var(--color-transparent);
--button-ghost-dark__border-color--disabled: var(--color-transparent);
--button-ghost-dark__border-color--hover: var(--color-transparent);
--button-ghost-dark__border-color: var(--color-transparent);
--button-ghost-dark__color--active: var(--color-gray-lighter);
--button-ghost-dark__color--disabled: var(--color-gray-dark);
--button-ghost-dark__color--hover: var(--color-gray-lightest);
--button-ghost-dark__color: var(--color-white);
--button-ghost__background-color--active: var(--color-transparent);
--button-ghost__background-color--disabled: var(--color-transparent);
--button-ghost__background-color--hover: var(--color-transparent);
--button-ghost__background-color: var(--color-transparent);
--button-ghost__border-color--active: var(--color-transparent);
--button-ghost__border-color--disabled: var(--color-transparent);
--button-ghost__border-color--hover: var(--color-transparent);
--button-ghost__border-color: var(--color-transparent);
--button-ghost__color--active: var(--color-primary-darkest);
--button-ghost__color--disabled: var(--color-gray-lighter);
--button-ghost__color--hover: var(--color-primary-darker);
--button-ghost__color: var(--color-primary);
--button-solid-alt__background-color--active: var(--color-primary-darkest);
--button-solid-alt__background-color--disabled: var(--color-gray-lighter);
--button-solid-alt__background-color--hover: var(--color-primary-darker);
--button-solid-alt__background-color: var(--color-primary);
--button-solid-alt__border-color--active: var(--color-primary-darkest);
--button-solid-alt__border-color--disabled: var(--color-gray-lighter);
--button-solid-alt__border-color--hover: var(--color-primary-darker);
--button-solid-alt__border-color: var(--color-primary);
--button-solid-alt__color--active: var(--color-white);
--button-solid-alt__color--disabled: var(--color-gray-darker);
--button-solid-alt__color--hover: var(--color-white);
--button-solid-alt__color: var(--color-white);
--button-solid-dark-alt__background-color--active: var(--color-primary);
--button-solid-dark-alt__background-color--disabled: var(--color-gray-darker);
--button-solid-dark-alt__background-color--hover: var(--color-primary-light);
--button-solid-dark-alt__background-color: var(--color-primary-lighter);
--button-solid-dark-alt__border-color--active: var(--color-primary);
--button-solid-dark-alt__border-color--disabled: var(--color-gray-darker);
--button-solid-dark-alt__border-color--hover: var(--color-primary-light);
--button-solid-dark-alt__border-color: var(--color-primary-lighter);
--button-solid-dark-alt__color--active: var(--color-base);
--button-solid-dark-alt__color--disabled: var(--color-base);
--button-solid-dark-alt__color--hover: var(--color-base);
--button-solid-dark-alt__color: var(--color-base);
--button-solid-dark__background-color--active: var(--color-gray-lighter);
--button-solid-dark__background-color--disabled: var(--color-gray-darker);
--button-solid-dark__background-color--hover: var(--color-gray-lightest);
--button-solid-dark__background-color: var(--color-white);
--button-solid-dark__border-color--active: var(--color-gray-lighter);
--button-solid-dark__border-color--disabled: var(--color-gray-darker);
--button-solid-dark__border-color--hover: var(--color-gray-lightest);
--button-solid-dark__border-color: var(--color-white);
--button-solid-dark__color--active: var(--color-base);
--button-solid-dark__color--disabled: var(--color-base);
--button-solid-dark__color--hover: var(--color-base);
--button-solid-dark__color: var(--color-base);
--button-solid__background-color--active: var(--color-secondary-darkest);
--button-solid__background-color--disabled: var(--color-gray-lighter);
--button-solid__background-color--hover: var(--color-secondary-darker);
--button-solid__background-color: var(--color-secondary);
--button-solid__border-color--active: var(--color-secondary-darkest);
--button-solid__border-color--disabled: var(--color-gray-lighter);
--button-solid__border-color--hover: var(--color-secondary-darker);
--button-solid__border-color: var(--color-secondary);
--button-solid__color--active: var(--color-white);
--button-solid__color--disabled: var(--color-gray-darker);
--button-solid__color--hover: var(--color-white);
--button-solid__color: var(--color-white);
--button__background-color--active: var(--color-primary-darkest);
--button__background-color--disabled: var(--color-white);
--button__background-color--hover: var(--color-primary);
--button__background-color: var(--color-white);
--button__border-color--active: var(--color-primary-darkest);
--button__border-color--disabled: var(--color-gray-lighter);
--button__border-color--hover: var(--color-primary);
--button__border-color: var(--color-primary);
--button__border-radius: var(--radius-default);
--button__border-width: 2px;
--button__color--active: var(--color-white);
--button__color--disabled: var(--color-gray-lighter);
--button__color--hover: var(--color-white);
--button__color: var(--color-primary);
--card__box-shadow: var(--box-shadow);
--choice-label__color--disabled--inverse: var(--color-muted-inverse);
--choice-label__color--disabled: var(--color-muted);
--choice-label__top-offset: 0.25rem;
--choice-wrapper__gap--small: 0.5rem;
--choice-wrapper__gap: 0.5rem;
--choice__background-color--checked: var(--color-primary);
--choice__background-color--disabled--inverse: #e9ecf126;
--choice__background-color--disabled: var(--color-gray-lighter);
--choice__background-color--inverse: var(--color-transparent);
--choice__background-color: var(--color-background);
--choice__border-color--checked: var(--color-primary);
--choice__border-color--disabled--inverse: var(--color-gray-light);
--choice__border-color--disabled: var(--color-gray-light);
--choice__border-color--error--inverse: var(--color-error-light);
--choice__border-color--error: var(--color-error);
--choice__border-color--focus: var(--color-primary-darker);
--choice__border-color--inverse: var(--color-white);
--choice__border-color--left: var(--color-primary);
--choice__border-color: var(--color-base);
--choice__border-radius: 0px;
--choice__border-width: 2px;
--choice__color--disabled: var(--color-muted);
--choice__color--unchecked: var(--color-white);
--choice__size--small: 20px;
--choice__size-radio--small: 12px;
--choice__size-radio: 22px;
--choice__size: 32px;
--color-accent-primary-dark: #c73103;
--color-accent-primary-darker: #9b2602;
--color-accent-primary-darkest: #6f1b02;
--color-accent-primary-light: #e7724f;
--color-accent-primary-lighter: #f5c3b3;
--color-accent-primary-lightest: #fcebe6;
--color-accent-primary: #dd3603;
--color-background-inverse: #00395e;
--color-background: #ffffff;
--color-base-inverse: #ffffff;
--color-base: #262626;
--color-black: #000000;
--color-border-dark: #0f1e38;
--color-border-inverse: #ffffff;
--color-border: #d9d9d9;
--color-error-dark: #cc1937;
--color-error-darker: #9f142b;
--color-error-darkest: #720e1f;
--color-error-light: #eb6077;
--color-error-lighter: #f7bbc5;
--color-error-lightest: #fef5f7;
--color-error: #e31c3d;
--color-focus-dark: #dd3603;
--color-focus-light: #ffffff;
--color-gray-dark: #5a5a5a;
--color-gray-darker: #404040;
--color-gray-darkest: #262626;
--color-gray-light: #a6a6a6;
--color-gray-lighter: #d9d9d9;
--color-gray-lightest: #f2f2f2;
--color-gray: #808080;
--color-info-dark: #3885ba;
--color-info-darker: #2b6891;
--color-info-darkest: #1f4a68;
--color-info-light: #78b4dd;
--color-info-lighter: #c5dff1;
--color-info-lightest: #ecf4fa;
--color-info: #3e94cf;
--color-muted-inverse: #e9ecf1;
--color-muted: #5a5a5a;
--color-primary-dark: #045d83;
--color-primary-darker: #034866;
--color-primary-darkest: #023449;
--color-primary-light: #4f95b2;
--color-primary-lighter: #b4d1de;
--color-primary-lightest: #e6f0f4;
--color-primary: #046791;
--color-secondary-dark: #107b0d;
--color-secondary-darker: #0d600a;
--color-secondary-darkest: #094507;
--color-secondary-light: #59ac56;
--color-secondary-lighter: #b8dcb7;
--color-secondary-lightest: #e7f3e7;
--color-secondary: #12890e;
--color-success-dark: #107b0d;
--color-success-darker: #0d600a;
--color-success-darkest: #094507;
--color-success-light: #59ac56;
--color-success-lighter: #b8dcb7;
--color-success-lightest: #f6faf5;
--color-success: #12890e;
--color-transparent-black-alpha25: #00000040;
--color-transparent-black-alpha50: #00000080;
--color-transparent-white-alpha25: #ffffff40;
--color-transparent-white-alpha50: #ffffff80;
--color-transparent: transparent;
--color-visited: #4c2c92;
--color-warn-dark: #dfb01c;
--color-warn-darker: #ae8916;
--color-warn-darkest: #7c6210;
--color-warn-light: #fad662;
--color-warn-lighter: #fdedbc;
--color-warn-lightest: #fef9e9;
--color-warn: #f8c41f;
--color-white: #ffffff;
--date-field__show-separators: 1;
--day-picker-button__background-color--hover: var(--color-primary-lightest);
--dialog-overlay__background-color: var(--color-transparent-black-alpha50);
--dialog__background-color: var(--color-background);
--dialog__padding: var(--spacer-4);
--drawer-close__color: var(--color-black);
--drawer-footer__background-color: var(--color-info-lightest);
--drawer-header__background-color: var(--color-gray-lightest);
--drawer-toggle__background-color--hover--inverse: var(--color-white);
--drawer-toggle__background-color--hover: var(--color-info);
--drawer-toggle__color--hover--inverse: var(--color-gray-darker);
--drawer-toggle__color--hover: var(--color-white);
--drawer__animation-timing: var(--animation-speed-2);
--drawer__background-color: var(--color-background);
--drawer__border-color: var(--color-border);
--field-max-width--medium: 12rem;
--field-max-width--small: 6rem;
--field-max-width: 460px;
--filter-chip-icon__color-active: var(--color-white);
--filter-chip-icon__color: var(--color-base);
--filter-chip__background-color--active: var(--color-primary);
--filter-chip__background-color: var(--color-primary-lightest);
--filter-chip__border-color--active: var(--color-primary);
--filter-chip__border-color: var(--color-primary);
--filter-chip__border-radius: var(--radius-pill);
--filter-chip__color--active: var(--color-white);
--filter-chip__color: var(--color-base);
--font-family-body: 'Open Sans', 'Inter', 'Roboto', 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', 'Arial', 'sans-serif';
--font-family-button: 'Open Sans', 'Inter', 'Roboto', 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', 'Arial', 'sans-serif';
--font-family-heading: 'Open Sans', 'Inter', 'Roboto', 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', 'Arial', 'sans-serif';
--font-family-link: 'Open Sans', 'Inter', 'Roboto', 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', 'Arial', 'sans-serif';
--font-family-pagination: 'Open Sans', 'Inter', 'Roboto', 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', 'Arial', 'sans-serif';
--font-line-height-base: 1.5;
--font-line-height-heading: 1.2999999523162842;
--font-line-height-lead: 1.7000000476837158;
--font-line-height-reset: 1;
--font-size-2xl--mobile: 1.5rem;
--font-size-2xl: 1.5rem;
--font-size-3xl--mobile: 1.875rem;
--font-size-3xl: 2.25rem;
--font-size-4xl--mobile: 2.25rem;
--font-size-4xl: 3rem;
--font-size-5xl--mobile: 2.25rem;
--font-size-5xl--tablet: 3rem;
--font-size-5xl: 3.75rem;
--font-size-base: 1rem;
--font-size-lg: 1.125rem;
--font-size-md: 1rem;
--font-size-sm: 0.875rem;
--font-size-xl: 1.3125rem;
--font-weight-body-lg: var(--font-weight-normal);
--font-weight-body-md: var(--font-weight-normal);
--font-weight-body-sm: var(--font-weight-normal);
--font-weight-bold: 700;
--font-weight-button-lg: var(--font-weight-bold);
--font-weight-button-md: var(--font-weight-bold);
--font-weight-button-sm: var(--font-weight-normal);
--font-weight-heading-2xl: var(--font-weight-bold);
--font-weight-heading-3xl: var(--font-weight-normal);
--font-weight-heading-4xl: var(--font-weight-normal);
--font-weight-heading-5xl: var(--font-weight-bold);
--font-weight-heading-lg: var(--font-weight-bold);
--font-weight-heading-md: var(--font-weight-bold);
--font-weight-heading-sm: var(--font-weight-normal);
--font-weight-heading-xl: var(--font-weight-bold);
--font-weight-normal: 400;
--global__color--inverse: var(--color-base-inverse);
--global__color: var(--color-base);
--global__font-family: var(--font-family-body);
--global__font-size: var(--font-size-base);
--global__line-height: var(--font-line-height-base);
--grid-columns: 12;
--grid-form-gutter-width: var(--spacer-2);
--grid-gutter-width: var(--spacer-4);
--hint__color--inverse: var(--color-muted-inverse);
--hint__color: var(--color-muted);
--inline-error__color--inverse: var(--color-error-lighter);
--inline-error__color: var(--color-error);
--label__font-family: var(--font-family-body);
--label__font-size: var(--font-size-md);
--label__font-weight: var(--font-weight-bold);
--label__letter-spacing: 0px;
--label__text-transform: inherit;
--link-inverse__color--active: var(--color-muted-inverse);
--link-inverse__color--hover: var(--color-muted-inverse);
--link-inverse__color--visited: var(--color-muted-inverse);
--link-inverse__color: var(--color-base-inverse);
--link__color--active: var(--color-primary-darkest);
--link__color--hover: var(--color-primary-darker);
--link__color--visited: var(--color-visited);
--link__color: var(--color-primary);
--link__text-decoration-offset: 0.0390625rem;
--link__text-decoration-thickness--hover: 0.0625rem;
--link__text-decoration-thickness: 0.0625rem;
--measure-base: 65ex;
--measure-narrow: 45ex;
--measure-wide: 80ex;
--media-width-lg: 1024px;
--media-width-md: 768px;
--media-width-sm: 544px;
--media-width-xl: 1280px;
--media-width-xs: 0px;
--pagination-current-page__color: var(--color-base);
--pagination-link__color--active: var(--color-primary-darkest);
--pagination-link__color--disabled: var(--color-gray-lighter);
--pagination-link__color--focus: var(--color-primary-darker);
--pagination-link__color--hover: var(--color-primary-darker);
--pagination-link__color: var(--color-primary);
--pagination-overflow__color: var(--color-gray-dark);
--pagination-page-count__color: var(--color-gray-dark);
--radius-circle: 100%;
--radius-default: 3px;
--radius-large: 8px;
--radius-medium: 4px;
--radius-pill: 9999px;
--radius-small: 2px;
--review__border-color: var(--color-border);
--site-margins-mobile: 1.5rem;
--site-margins: 3rem;
--site-max-width: 1104px;
--spacer-1: 8px;
--spacer-2: 16px;
--spacer-3: 24px;
--spacer-4: 32px;
--spacer-5: 40px;
--spacer-6: 48px;
--spacer-7: 56px;
--spacer-half: 4px;
--spacer-none: 0px;
--spinner__background-color--inverse: var(--color-background-inverse);
--spinner__background-color: var(--color-background);
--spinner__color--inverse: var(--color-white);
--spinner__color: var(--color-base);
--steplist-step__background-color--completed: var(--color-base);
--steplist-step__border-color--default: var(--color-muted);
--steplist-step__border-color: var(--color-border);
--steplist-step__color--completed: var(--color-base);
--steplist-step__color--current: var(--color-white);
--steplist-step__color: var(--color-muted);
--steplist__background-color--current: var(--color-primary);
--steplist__color--current: var(--color-primary);
--steplist__color: var(--color-muted);
--table-header__background-color: var(--color-gray-lightest);
--table__background-color--striped: var(--color-gray-lightest);
--table__border-color: var(--color-black);
--table__padding: var(--spacer-2);
--tabs-panel__background-color: var(--color-background);
--tabs__background-color--disabled: var(--color-gray-lighter);
--tabs__background-color--hover: var(--color-background);
--tabs__background-color--selected: var(--color-background);
--tabs__background-color: var(--color-background);
--tabs__border-color--disabled: var(--color-gray-lighter);
--tabs__border-color--selected: var(--color-primary);
--tabs__border-color: var(--color-border);
--tabs__color--active: var(--color-primary-darker);
--tabs__color--disabled: var(--color-gray-darker);
--tabs__color--hover: var(--color-primary);
--tabs__color--selected: var(--color-primary);
--tabs__color: var(--color-base);
--text-input-currency-icon__line-height: var(--text-input__line-height);
--text-input-currency-icon__spacing: 20px;
--text-input__background-color--disabled: var(--color-gray-lighter);
--text-input__border-color--disabled: var(--color-gray-light);
--text-input__border-color--error--inverse: var(--color-error-light);
--text-input__border-color--error: var(--color-error);
--text-input__border-color--inverse: var(--color-black);
--text-input__border-color: var(--color-base);
--text-input__border-radius: 0px;
--text-input__border-width--disabled: 2px;
--text-input__border-width--error: 3px;
--text-input__border-width: 2px;
--text-input__color: var(--color-base);
--text-input__divider-color: var(--color-gray-light);
--text-input__line-height: 1.2999999523162842;
--text-input__padding: var(--spacer-1);
--tooltip-icon__color--inverse: var(--color-white);
--tooltip-icon__color: var(--color-primary);
--tooltip-trigger__color: var(--color-base);
--tooltip__background-color: var(--color-background);
--tooltip__border-color--active: #04679140;
--tooltip__border-color--inverse-active: #ffffff40;
--tooltip__border-color: var(--color-gray-darker);
--tooltip__border-width: 1px;
--tooltip__box-shadow-color: var(--color-gray-light);
--tooltip__color: var(--color-base);
--usa-banner-close-button__background-color--mobile: var(--color-gray-lighter);
--usa-banner-close-button__color--mobile: var(--color-primary);
--usa-banner-domain-icon__color: var(--color-primary);
--usa-banner-security-icon__color: var(--color-success-light);
--usa-banner__background-color: var(--color-gray-lightest);
--vertical-nav-item__background-color--hover: var(--color-gray-lightest);
--vertical-nav-item__border-color: var(--color-gray-dark);
--vertical-nav-item__color--hover: var(--color-primary);
--vertical-nav-label-icon__color: var(--color-base);
--vertical-nav-label__border-color--current: var(--color-primary);
--vertical-nav-label__color--current: var(--color-primary);
--vertical-nav-label__color: var(--color-base);"
`;

exports[`CSS snapshots variables in medicare-theme.css match snapshot 1`] = `
"--accordion-button__color: var(--color-base);
--accordion-content__background-color: var(--color-white);
--accordion__background-color--hover: var(--color-gray-lighter);
--accordion__background-color: var(--color-gray-lightest);
--accordion__border-bottom-left-radius: 0px;
--accordion__border-bottom-right-radius: 0px;
--accordion__border-color: var(--color-gray-lightest);
--accordion__border-top-left-radius: 0px;
--accordion__border-top-right-radius: 0px;
--accordion__border-width: var(--spacer-half);
--accordion__color: var(--color-base);
--alert-bar__width: var(--spacer-1);
--alert__background-color--error: var(--color-error-lightest);
--alert__background-color--lightweight: var(--color-white);
--alert__background-color--success: var(--color-success-lightest);
--alert__background-color--warn: var(--color-warn-lightest);
--alert__background-color: var(--color-info-lightest);
--alert__border-color--error: var(--color-error);
--alert__border-color--success: var(--color-success);
--alert__border-color--warn: var(--color-warn);
--alert__border-left-color: var(--color-info);
--alert__font-color: var(--color-base);
--alert__icon-size: 1.5rem;
--alert__padding: var(--spacer-2);
--animation-speed-1: 250ms;
--animation-speed-2: 300ms;
--animation-speed-3: 500ms;
--animation-speed-4: 800ms;
--badge__background-color--alert: var(--color-error);
--badge__background-color--info: var(--color-primary);
--badge__background-color--success: var(--color-success);
--badge__background-color--warn: var(--color-warn);
--badge__background-color: var(--color-gray-dark);
--badge__border-radius: var(--radius-pill);
--badge__font-color--alert: var(--color-white);
--badge__font-color--info: var(--color-white);
--badge__font-color--success: var(--color-white);
--badge__font-color--warn: var(--color-base);
--badge__font-color: var(--color-white);
--box-shadow: 0 2px 3px 0 #3232323b;
--button-alt__background-color--active: var(--color-white);
--button-alt__background-color--disabled: var(--color-white);
--button-alt__background-color--hover: var(--color-primary-dark);
--button-alt__background-color: var(--color-white);
--button-alt__border-color--active: var(--color-primary-light);
--button-alt__border-color--disabled: var(--color-gray-lighter);
--button-alt__border-color--hover: var(--color-primary-dark);
--button-alt__border-color: var(--color-primary);
--button-alt__color--active: var(--color-primary-light);
--button-alt__color--disabled: var(--color-gray-lighter);
--button-alt__color--hover: var(--color-white);
--button-alt__color: var(--color-primary);
--button-dark-alt__background-color--active: var(--color-transparent);
--button-dark-alt__background-color--disabled: var(--color-transparent);
--button-dark-alt__background-color--hover: var(--color-transparent);
--button-dark-alt__background-color: var(--color-transparent);
--button-dark-alt__border-color--active: var(--color-secondary-light);
--button-dark-alt__border-color--disabled: var(--color-gray-dark);
--button-dark-alt__border-color--hover: var(--color-secondary-lighter);
--button-dark-alt__border-color: var(--color-secondary-lightest);
--button-dark-alt__color--active: var(--color-secondary-light);
--button-dark-alt__color--disabled: var(--color-gray-dark);
--button-dark-alt__color--hover: var(--color-secondary-lighter);
--button-dark-alt__color: var(--color-secondary-lightest);
--button-dark__background-color--active: var(--color-transparent);
--button-dark__background-color--disabled: transparent;
--button-dark__background-color--hover: var(--color-transparent);
--button-dark__background-color: var(--color-transparent);
--button-dark__border-color--active: var(--color-gray-lighter);
--button-dark__border-color--disabled: var(--color-gray-dark);
--button-dark__border-color--hover: var(--color-gray-lightest);
--button-dark__border-color: var(--color-white);
--button-dark__color--active: var(--color-gray-lighter);
--button-dark__color--disabled: var(--color-gray-dark);
--button-dark__color--hover: var(--color-gray-lightest);
--button-dark__color: var(--color-white);
--button-ghost-alt__background-color--active: var(--color-transparent);
--button-ghost-alt__background-color--disabled: var(--color-transparent);
--button-ghost-alt__background-color--hover: var(--color-transparent);
--button-ghost-alt__background-color: var(--color-transparent);
--button-ghost-alt__border-color--active: var(--color-transparent);
--button-ghost-alt__border-color--disabled: var(--color-transparent);
--button-ghost-alt__border-color--hover: var(--color-transparent);
--button-ghost-alt__border-color: var(--color-transparent);
--button-ghost-alt__color--active: var(--color-primary-light);
--button-ghost-alt__color--disabled: var(--color-gray-lighter);
--button-ghost-alt__color--hover: var(--color-primary-darker);
--button-ghost-alt__color: var(--color-primary);
--button-ghost-dark-alt__background-color--active: var(--color-transparent);
--button-ghost-dark-alt__background-color--disabled: var(--color-transparent);
--button-ghost-dark-alt__background-color--hover: var(--color-transparent);
--button-ghost-dark-alt__background-color: var(--color-transparent);
--button-ghost-dark-alt__border-color--active: var(--color-transparent);
--button-ghost-dark-alt__border-color--disabled: var(--color-transparent);
--button-ghost-dark-alt__border-color--hover: var(--color-transparent);
--button-ghost-dark-alt__border-color: var(--color-transparent);
--button-ghost-dark-alt__color--active: var(--color-gray-lighter);
--button-ghost-dark-alt__color--disabled: var(--color-gray-dark);
--button-ghost-dark-alt__color--hover: var(--color-gray-lightest);
--button-ghost-dark-alt__color: var(--color-white);
--button-ghost-dark__background-color--active: var(--color-transparent);
--button-ghost-dark__background-color--disabled: var(--color-transparent);
--button-ghost-dark__background-color--hover: var(--color-transparent);
--button-ghost-dark__background-color: var(--color-transparent);
--button-ghost-dark__border-color--active: var(--color-transparent);
--button-ghost-dark__border-color--disabled: var(--color-transparent);
--button-ghost-dark__border-color--hover: var(--color-transparent);
--button-ghost-dark__border-color: var(--color-transparent);
--button-ghost-dark__color--active: var(--color-gray-lighter);
--button-ghost-dark__color--disabled: var(--color-gray-dark);
--button-ghost-dark__color--hover: var(--color-gray-lightest);
--button-ghost-dark__color: var(--color-white);
--button-ghost__background-color--active: var(--color-transparent);
--button-ghost__background-color--disabled: var(--color-transparent);
--button-ghost__background-color--hover: var(--color-transparent);
--button-ghost__background-color: var(--color-transparent);
--button-ghost__border-color--active: var(--color-transparent);
--button-ghost__border-color--disabled: var(--color-transparent);
--button-ghost__border-color--hover: var(--color-transparent);
--button-ghost__border-color: var(--color-transparent);
--button-ghost__color--active: var(--color-secondary-light);
--button-ghost__color--disabled: var(--color-gray-lighter);
--button-ghost__color--hover: var(--color-secondary-dark);
--button-ghost__color: var(--color-secondary);
--button-solid-alt__background-color--active: var(--color-secondary-light);
--button-solid-alt__background-color--disabled: var(--color-gray-lighter);
--button-solid-alt__background-color--hover: var(--color-secondary-dark);
--button-solid-alt__background-color: var(--color-secondary);
--button-solid-alt__border-color--active: var(--color-secondary-light);
--button-solid-alt__border-color--disabled: var(--color-gray-lighter);
--button-solid-alt__border-color--hover: var(--color-secondary-dark);
--button-solid-alt__border-color: var(--color-secondary);
--button-solid-alt__color--active: var(--color-white);
--button-solid-alt__color--disabled: var(--color-gray-darker);
--button-solid-alt__color--hover: var(--color-white);
--button-solid-alt__color: var(--color-white);
--button-solid-dark-alt__background-color--active: var(--color-white);
--button-solid-dark-alt__background-color--disabled: var(--color-gray-lighter);
--button-solid-dark-alt__background-color--hover: var(--color-secondary-dark);
--button-solid-dark-alt__background-color: var(--color-white);
--button-solid-dark-alt__border-color--active: var(--color-white);
--button-solid-dark-alt__border-color--disabled: var(--color-gray-lighter);
--button-solid-dark-alt__border-color--hover: var(--color-secondary-dark);
--button-solid-dark-alt__border-color: var(--color-white);
--button-solid-dark-alt__color--active: var(--color-secondary-light);
--button-solid-dark-alt__color--disabled: var(--color-base);
--button-solid-dark-alt__color--hover: var(--color-white);
--button-solid-dark-alt__color: var(--color-secondary);
--button-solid-dark__background-color--active: var(--color-white);
--button-solid-dark__background-color--disabled: var(--color-gray-lighter);
--button-solid-dark__background-color--hover: var(--color-primary-dark);
--button-solid-dark__background-color: var(--color-white);
--button-solid-dark__border-color--active: var(--color-white);
--button-solid-dark__border-color--disabled: var(--color-gray-lighter);
--button-solid-dark__border-color--hover: var(--color-primary-dark);
--button-solid-dark__border-color: var(--color-white);
--button-solid-dark__color--active: var(--color-primary-light);
--button-solid-dark__color--disabled: var(--color-base);
--button-solid-dark__color--hover: var(--color-white);
--button-solid-dark__color: var(--color-primary);
--button-solid__background-color--active: var(--color-primary-light);
--button-solid__background-color--disabled: var(--color-gray-lighter);
--button-solid__background-color--hover: var(--color-primary-dark);
--button-solid__background-color: var(--color-primary);
--button-solid__border-color--active: var(--color-primary-light);
--button-solid__border-color--disabled: var(--color-gray-lighter);
--button-solid__border-color--hover: var(--color-primary-dark);
--button-solid__border-color: var(--color-primary);
--button-solid__color--active: var(--color-white);
--button-solid__color--disabled: var(--color-gray-darker);
--button-solid__color--hover: var(--color-white);
--button-solid__color: var(--color-white);
--button__background-color--active: var(--color-white);
--button__background-color--disabled: var(--color-white);
--button__background-color--hover: var(--color-secondary-dark);
--button__background-color: var(--color-white);
--button__border-color--active: var(--color-secondary-light);
--button__border-color--disabled: var(--color-gray-lighter);
--button__border-color--hover: var(--color-secondary-dark);
--button__border-color: var(--color-secondary);
--button__border-radius: var(--radius-default);
--button__border-width: 1px;
--button__color--active: var(--color-secondary-light);
--button__color--disabled: var(--color-gray-lighter);
--button__color--hover: var(--color-white);
--button__color: var(--color-secondary);
--card__box-shadow: var(--box-shadow);
--choice-label__color--disabled--inverse: var(--color-muted-inverse);
--choice-label__color--disabled: var(--color-muted);
--choice-label__top-offset: 0.125rem;
--choice-wrapper__gap--small: 0.75rem;
--choice-wrapper__gap: 1rem;
--choice__background-color--checked: var(--color-secondary);
--choice__background-color--disabled--inverse: #e9ecf126;
--choice__background-color--disabled: var(--color-gray-lighter);
--choice__background-color--inverse: transparent;
--choice__background-color: var(--color-background);
--choice__border-color--checked: var(--color-secondary);
--choice__border-color--disabled--inverse: var(--color-gray-light);
--choice__border-color--disabled: var(--color-gray-light);
--choice__border-color--error--inverse: var(--color-white);
--choice__border-color--error: var(--color-base);
--choice__border-color--focus: var(--color-secondary-darker);
--choice__border-color--inverse: var(--color-white);
--choice__border-color--left: var(--color-secondary);
--choice__border-color: var(--color-base);
--choice__border-radius: 3px;
--choice__border-width: 2px;
--choice__color--disabled: var(--color-muted);
--choice__color--unchecked: var(--color-white);
--choice__size--small: 20px;
--choice__size-radio--small: 12px;
--choice__size-radio: 16px;
--choice__size: 24px;
--color-accent-primary-dark: #a00000;
--color-accent-primary-darker: #7d0000;
--color-accent-primary-darkest: #590000;
--color-accent-primary-light: #c94d4d;
--color-accent-primary-lighter: #e8b3b3;
--color-accent-primary-lightest: #f7e6e6;
--color-accent-primary: #b20000;
--color-background-inverse: #146a5d;
--color-background: #ffffff;
--color-base-inverse: #ffffff;
--color-base: #404040;
--color-black: #000000;
--color-border-dark: #0f1e38;
--color-border-inverse: #ffffff;
--color-border: #d9d9d9;
--color-error-dark: #a00000;
--color-error-darker: #7d0000;
--color-error-darkest: #590000;
--color-error-light: #c94d4d;
--color-error-lighter: #e8b3b3;
--color-error-lightest: #f7e6e6;
--color-error: #b20000;
--color-focus-dark: #c97532;
--color-focus-light: #ffffff;
--color-gray-dark: #5a5a5a;
--color-gray-darker: #404040;
--color-gray-darkest: #262626;
--color-gray-light: #a6a6a6;
--color-gray-lighter: #d9d9d9;
--color-gray-lightest: #f2f2f2;
--color-gray: #808080;
--color-info-dark: #1b3665;
--color-info-darker: #152a4e;
--color-info-darkest: #0f1e38;
--color-info-light: #62779b;
--color-info-lighter: #bcc5d4;
--color-info-lightest: #e9ecf1;
--color-info: #1e3c70;
--color-muted-inverse: #e9ecf1;
--color-muted: #5a5a5a;
--color-primary-dark: #125f54;
--color-primary-darker: #0e4a41;
--color-primary-darkest: #0a352f;
--color-primary-light: #5b978e;
--color-primary-lighter: #b9d2ce;
--color-primary-lightest: #e8f0ef;
--color-primary: #146a5d;
--color-secondary-dark: #1b3665;
--color-secondary-darker: #152a4e;
--color-secondary-darkest: #0f1e38;
--color-secondary-light: #62779b;
--color-secondary-lighter: #bcc5d4;
--color-secondary-lightest: #e9ecf1;
--color-secondary: #1e3c70;
--color-success-dark: #107b0d;
--color-success-darker: #0d600a;
--color-success-darkest: #094507;
--color-success-light: #59ac56;
--color-success-lighter: #b8dcb7;
--color-success-lightest: #f6faf5;
--color-success: #12890e;
--color-transparent-black-alpha25: #00000040;
--color-transparent-black-alpha50: #00000080;
--color-transparent-white-alpha25: #ffffff40;
--color-transparent-white-alpha50: #ffffff80;
--color-transparent: transparent;
--color-visited: #590000;
--color-warn-dark: #dfb01c;
--color-warn-darker: #ae8916;
--color-warn-darkest: #7c6210;
--color-warn-light: #fad662;
--color-warn-lighter: #fdedbc;
--color-warn-lightest: #fef9e9;
--color-warn: #f8c41f;
--color-white: #ffffff;
--day-picker-button__background-color--hover: var(--color-primary-lightest);
--dialog-overlay__background-color: var(--color-transparent-black-alpha50);
--dialog__background-color: var(--color-background);
--dialog__padding: var(--spacer-4);
--drawer-close__color: var(--color-black);
--drawer-footer__background-color: var(--color-info-lightest);
--drawer-header__background-color: var(--color-transparent);
--drawer-toggle__background-color--hover--inverse: var(--color-white);
--drawer-toggle__background-color--hover: var(--color-info);
--drawer-toggle__color--hover--inverse: var(--color-gray-dark);
--drawer-toggle__color--hover: var(--color-white);
--drawer__animation-timing: var(--animation-speed-2);
--drawer__background-color: var(--color-background);
--drawer__border-color: var(--color-border);
--field-max-width--medium: 12rem;
--field-max-width--small: 6rem;
--field-max-width: 460px;
--filter-chip-icon__color-active: var(--color-white);
--filter-chip-icon__color: var(--color-base);
--filter-chip__background-color--active: var(--color-primary);
--filter-chip__background-color: var(--color-secondary-lightest);
--filter-chip__border-color--active: var(--color-primary);
--filter-chip__border-color: var(--color-secondary);
--filter-chip__border-radius: var(--radius-pill);
--filter-chip__color--active: var(--color-white);
--filter-chip__color: var(--color-base);
--font-family-body: 'Rubik', 'Seravek', 'Gill Sans Nova', 'Ubuntu', 'Calibri', 'DejaVu Sans', 'source-sans-pro', 'sans-serif';
--font-family-button: 'Rubik', 'Seravek', 'Gill Sans Nova', 'Ubuntu', 'Calibri', 'DejaVu Sans', 'source-sans-pro', 'sans-serif';
--font-family-heading: 'Montserrat', 'Avenir', 'Corbel', 'URW Gothic', 'source-sans-pro', 'sans-serif';
--font-family-link: 'Rubik', 'Seravek', 'Gill Sans Nova', 'Ubuntu', 'Calibri', 'DejaVu Sans', 'source-sans-pro', 'sans-serif';
--font-family-pagination: 'Montserrat', 'Avenir', 'Corbel', 'URW Gothic', 'source-sans-pro', 'sans-serif';
--font-line-height-base: 1.5;
--font-line-height-heading: 1.2999999523162842;
--font-line-height-lead: 1.7000000476837158;
--font-line-height-reset: 1;
--font-size-2xl--mobile: 1.75rem;
--font-size-2xl: 2rem;
--font-size-3xl--mobile: 1.875rem;
--font-size-3xl: 2.5rem;
--font-size-4xl--mobile: 2.5rem;
--font-size-4xl: 2.75rem;
--font-size-5xl--mobile: 2.5rem;
--font-size-5xl--tablet: 2.75rem;
--font-size-5xl: 3.125rem;
--font-size-base: 1rem;
--font-size-lg: 1.25rem;
--font-size-md: 1rem;
--font-size-sm: 0.875rem;
--font-size-xl: 1.5rem;
--font-weight-body-lg: var(--font-weight-normal);
--font-weight-body-md: var(--font-weight-normal);
--font-weight-body-sm: var(--font-weight-normal);
--font-weight-bold: 600;
--font-weight-button-lg: var(--font-weight-normal);
--font-weight-button-md: var(--font-weight-normal);
--font-weight-button-sm: var(--font-weight-normal);
--font-weight-heading-2xl: var(--font-weight-bold);
--font-weight-heading-3xl: var(--font-weight-bold);
--font-weight-heading-4xl: var(--font-weight-bold);
--font-weight-heading-5xl: var(--font-weight-bold);
--font-weight-heading-lg: var(--font-weight-bold);
--font-weight-heading-md: var(--font-weight-bold);
--font-weight-heading-sm: var(--font-weight-bold);
--font-weight-heading-xl: var(--font-weight-bold);
--font-weight-normal: 400;
--global__color--inverse: var(--color-base-inverse);
--global__color: var(--color-base);
--global__font-family: var(--font-family-body);
--global__font-size: var(--font-size-base);
--global__line-height: var(--font-line-height-base);
--grid-columns: 12;
--grid-form-gutter-width: var(--spacer-2);
--grid-gutter-width: var(--spacer-4);
--hint__color--inverse: var(--color-muted-inverse);
--hint__color: var(--color-muted);
--inline-error__color--inverse: var(--color-error-lighter);
--inline-error__color: var(--color-error);
--label__font-family: var(--font-family-heading);
--label__font-size: var(--font-size-sm);
--label__font-weight: var(--font-weight-bold);
--label__letter-spacing: 0.5px;
--label__text-transform: uppercase;
--link-inverse__color--active: var(--color-muted-inverse);
--link-inverse__color--hover: var(--color-muted-inverse);
--link-inverse__color--visited: var(--color-muted-inverse);
--link-inverse__color: var(--color-base-inverse);
--link__color--active: var(--color-secondary-dark);
--link__color--hover: var(--color-secondary-dark);
--link__color--visited: var(--color-visited);
--link__color: var(--color-secondary);
--link__text-decoration-offset: 3px;
--link__text-decoration-thickness--hover: 2px;
--link__text-decoration-thickness: 1px;
--measure-base: 65ex;
--measure-narrow: 45ex;
--measure-wide: 80ex;
--media-width-lg: 1024px;
--media-width-md: 768px;
--media-width-sm: 544px;
--media-width-xl: 1280px;
--media-width-xs: 0px;
--pagination-current-page__color: var(--color-base);
--pagination-link__color--active: var(--color-primary-darkest);
--pagination-link__color--disabled: var(--color-gray-lighter);
--pagination-link__color--focus: var(--color-primary-darker);
--pagination-link__color--hover: var(--color-primary-darker);
--pagination-link__color: var(--color-primary);
--pagination-overflow__color: var(--color-gray-dark);
--pagination-page-count__color: var(--color-gray-dark);
--radius-circle: 100%;
--radius-default: 3px;
--radius-large: 8px;
--radius-medium: 4px;
--radius-pill: 9999px;
--radius-small: 2px;
--review__border-color: var(--color-border);
--site-margins-mobile: 1.5rem;
--site-margins: 3rem;
--site-max-width: 1104px;
--spacer-1: 8px;
--spacer-2: 16px;
--spacer-3: 24px;
--spacer-4: 32px;
--spacer-5: 40px;
--spacer-6: 48px;
--spacer-7: 56px;
--spacer-half: 4px;
--spacer-none: 0px;
--spinner__background-color--inverse: var(--color-background-inverse);
--spinner__background-color: var(--color-background);
--spinner__color--inverse: var(--color-white);
--spinner__color: var(--color-base);
--steplist-step__background-color--completed: var(--color-base);
--steplist-step__border-color--default: var(--color-muted);
--steplist-step__border-color: var(--color-border);
--steplist-step__color--completed: var(--color-base);
--steplist-step__color--current: var(--color-white);
--steplist-step__color: var(--color-muted);
--steplist__background-color--current: var(--color-primary);
--steplist__color--current: var(--color-primary);
--steplist__color: var(--color-muted);
--table-header__background-color: var(--color-gray-lightest);
--table__background-color--striped: var(--color-gray-lightest);
--table__border-color: var(--color-black);
--table__padding: var(--spacer-2);
--tabs-panel__background-color: var(--color-background);
--tabs__background-color--disabled: var(--color-gray-lighter);
--tabs__background-color--hover: var(--color-background);
--tabs__background-color--selected: var(--color-background);
--tabs__background-color: var(--color-background);
--tabs__border-color--disabled: var(--color-gray-lighter);
--tabs__border-color--selected: var(--color-primary);
--tabs__border-color: var(--color-border);
--tabs__color--active: var(--color-primary-darker);
--tabs__color--disabled: var(--color-gray-darker);
--tabs__color--hover: var(--color-primary);
--tabs__color--selected: var(--color-primary);
--tabs__color: var(--color-base);
--text-input-currency-icon__line-height: var(--font-line-height-reset);
--text-input-currency-icon__spacing: 32px;
--text-input__background-color--disabled: var(--color-gray-lighter);
--text-input__border-color--disabled: var(--color-gray-darker);
--text-input__border-color--error--inverse: var(--color-error-lighter);
--text-input__border-color--error: var(--color-error);
--text-input__border-color--inverse: var(--color-gray);
--text-input__border-color: var(--color-gray);
--text-input__border-radius: var(--radius-default);
--text-input__border-width--disabled: 1px;
--text-input__border-width--error: 3px;
--text-input__border-width: 2px;
--text-input__color: var(--color-gray-darker);
--text-input__divider-color: var(--color-gray-light);
--text-input__line-height: 1.2999999523162842;
--text-input__padding: var(--spacer-2);
--tooltip-icon__color--inverse: var(--color-white);
--tooltip-icon__color: var(--color-primary);
--tooltip-trigger__color: var(--color-base);
--tooltip__background-color: var(--color-background);
--tooltip__border-color--active: #146a5d40;
--tooltip__border-color--inverse-active: #ffffff40;
--tooltip__border-color: var(--color-gray-darker);
--tooltip__border-width: 1px;
--tooltip__box-shadow-color: var(--color-gray);
--tooltip__color: var(--color-base);
--usa-banner-close-button__background-color--mobile: var(--color-gray-lighter);
--usa-banner-close-button__color--mobile: var(--color-primary);
--usa-banner-domain-icon__color: var(--color-primary);
--usa-banner-security-icon__color: var(--color-success-light);
--usa-banner__background-color: var(--color-gray-lightest);
--usa-banner__no-max-width: 1;
--vertical-nav-item__background-color--hover: var(--color-gray-lightest);
--vertical-nav-item__border-color: var(--color-gray-dark);
--vertical-nav-item__color--hover: var(--color-primary);
--vertical-nav-label-icon__color: var(--color-base);
--vertical-nav-label__border-color--current: var(--color-primary);
--vertical-nav-label__color--current: var(--color-primary);
--vertical-nav-label__color: var(--color-base);"
`;
